<resources>
    <string name="app_name">Play Android</string>
    <string name="hint_login_username">请输入用户名</string>
    <string name="btn_login">登录</string>
    <string name="hint_password">请输入密码</string>


    <string name="net_err_timeout">网络访问超时</string>
    <string name="net_err_connect">网络连接异常</string>
    <string name="net_err_parse">数据解析异常</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tab_label_home">首页</string>
    <string name="tab_label_system">体系</string>
    <string name="tab_label_project">项目</string>
    <string name="tab_label_me">我</string>

    <string name="drawer_item_home">首页</string>
    <string name="drawer_item_system">体系</string>
    <string name="drawer_item_project">项目</string>


    <string name="desc1">desc1</string>
    <string name="article_time_author">%1$s • %2$s</string>

    <string name="require_username">用户名不能为空</string>
    <string name="require_password">密码不能为空</string>

    <string name="digit_alphabet_numbers">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@</string>


</resources>